Fix java problem 48